--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -108,6 +108,19 @@ header>h1 {
 .navbar__logo {
   height: 1.38rem;
 }
+
+img.themedImage_node_modules-\@docusaurus-theme-classic-lib-next-theme-ThemedImage-styles-module.themedImage--light_node_modules-\@docusaurus-theme-classic-lib-next-theme-ThemedImage-styles-module {
+  height: 1.38rem;
+}
 /* .navbar__logo {
   height: 1.25rem;
 } */
+
+
+/* 统一两种 h1 标题的样式 */
+header>h1,h1 {
+  font-size: 2.5rem !important;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #eaeaea;
+}
+
