--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -91,6 +91,28 @@
 
 /* 自定义样式 == 开始 */
 
+h2 {
+  font-size: 35px;
+  }
+  
+  h3 {
+  font-size: 29px;
+  }
+  
+  h4 {
+  font-size: 24px;
+  }
+  
+  h5 {
+  font-size: 19px;
+  }
+
+
+.menu__link--active {
+  color: var(--ifm-menu-color-active);
+  border-left: 5px solid #4183c4!important;
+}
+
 
 header>h1 {
   font-size: 2.5rem !important;
