--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -108,10 +108,11 @@ h2 {
   }
 
 
-.menu__link--active {
-  color: var(--ifm-menu-color-active);
-  border-left: 5px solid #4183c4!important;
-}
+  .menu__link--active:not(.menu__link--sublist) {
+    background-color: var(--ifm-menu-color-background-active);
+    border-left: 5px solid #4183c4!important;
+  }
+
 
 
 header>h1 {
