--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -91,21 +91,21 @@
 
 /* 自定义样式 == 开始 */
 
-h2 {
+.markdown>h2 {
   font-size: 35px;
-  }
+}
   
-  h3 {
+.markdown>h3 {
   font-size: 29px;
-  }
+}
   
-  h4 {
+.markdown>h4 {
   font-size: 24px;
-  }
+}
   
-  h5 {
+.markdown>h5 {
   font-size: 19px;
-  }
+}
 
 
   .menu__link--active:not(.menu__link--sublist) {
