--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -110,7 +110,8 @@
 
   .menu__link--active:not(.menu__link--sublist) {
     background-color: var(--ifm-menu-color-background-active);
-    border-left: 5px solid #0969da!important;
+    border-left: 4px solid #0969da!important;
+    margin-left: -4px;
   }
 
 
